# weave

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
desktop/: forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
desktop/assets/: icon.icns
desktop/tests/: chat-run-registry.test.ts  chat-state-api.test.ts  chat-store.test.ts  chat-system-instructions.test.ts  chat-tool-activity.test.ts  chatgpt-codex-language-model.test.ts  connection.test.ts  context-usage.test.ts  editor-manager.test.ts  editor-tab-store.test.ts  electron-smoke.test.ts  git-service.test.ts  memory-policy.test.ts  mobile-connection-adapter.test.ts  plan-artifacts.test.ts  portal-editor-client.test.ts  portal-supervisor.test.ts  profile-resolution.test.ts  project-git-state.test.ts  shortcuts.test.ts  terminal-manager.test.ts  terminal-panel-tabs.test.ts  terminal-store.test.ts  thread-visibility.test.ts  workspace-surface-store.test.ts
docs/: codemirror-editor-plan.md  portal-bridge-plan.md
mobile/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/scripts/: dev-ios.mjs
mobile/src/: main.tsx  styles.css
portal/: README.md  deno.json
portal/native/window-stream-native/: CMakeLists.txt
portal/native/window-stream-native/Sources/: main.mm
portal/scripts/: build-native.ts  build.ts  install.ts  window-capture-sck-smoke.mjs  window-host-session-smoke.mjs  window-host-smoke.mjs  window-stream-native-benchmark.mjs  window-stream-native-smoke.mjs
portal/src/: context_discovery_test.ts  diff_test.ts  editor.ts  editor_test.ts  git.ts  git_test.ts  lifecycle.ts  lifecycle_test.ts  main.ts  native_pty_test.ts  terminal.ts  terminal_test.ts  vault.ts  window.ts  window_config.ts  window_host_client.ts  window_host_runtime.ts  window_protocol.ts  window_stream_control_test.ts  window_test.ts
portal/window-host-electron/: main.cjs  (+4 more)
scripts/: client-vite-env.ts
server/: .dockerignore  .env.example  AGENTS.md  README.md  compose.dokploy.yml  package-lock.json  package.json
tui/: deno.json
web/: .env.example  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+156 files in other folders)
